[gd_scene load_steps=7 format=3 uid="uid://dv8q33r8aan5b"]

[ext_resource type="Script" path="res://addons/gdfxr/editor/EditorIconButton.gd" id="1"]
[ext_resource type="Script" path="res://addons/gdfxr/editor/Editor.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://p27e3x3kk5e0" path="res://addons/gdfxr/editor/ParamSlider.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://b8wt6fq8w6mxc" path="res://addons/gdfxr/editor/ParamOption.tscn" id="4"]
[ext_resource type="PackedScene" path="res://addons/gdfxr/editor/PluginTranslator.tscn" id="5"]
[ext_resource type="PackedScene" path="res://addons/gdfxr/editor/VersionButton.tscn" id="6"]

[node name="Editor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Toolbar" type="HBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 31.0

[node name="New" type="Button" parent="Toolbar"]
offset_right = 8.0
offset_bottom = 31.0
tooltip_text = "New"
script = ExtResource("1")
icon_name = "New"

[node name="Load" type="Button" parent="Toolbar"]
offset_left = 12.0
offset_right = 20.0
offset_bottom = 31.0
tooltip_text = "Load"
script = ExtResource("1")
icon_name = "Load"

[node name="Save" type="Button" parent="Toolbar"]
offset_left = 24.0
offset_right = 32.0
offset_bottom = 31.0
tooltip_text = "Save"
script = ExtResource("1")
icon_name = "Save"

[node name="Extra" type="MenuButton" parent="Toolbar"]
offset_left = 36.0
offset_right = 44.0
offset_bottom = 31.0
tooltip_text = "Extra Options"
script = ExtResource("1")
icon_name = "GuiTabMenuHl"

[node name="VSeparator" type="VSeparator" parent="Toolbar"]
offset_left = 48.0
offset_right = 52.0
offset_bottom = 31.0

[node name="Play" type="Button" parent="Toolbar"]
offset_left = 56.0
offset_right = 97.0
offset_bottom = 31.0
size_flags_horizontal = 0
text = "Play"
script = ExtResource("1")
icon_name = "Play"

[node name="Restore" type="Button" parent="Toolbar"]
offset_left = 101.0
offset_right = 169.0
offset_bottom = 31.0
tooltip_text = "Restore"
disabled = true
text = "Restore"
script = ExtResource("1")
icon_name = "Reload"

[node name="VSeparator2" type="VSeparator" parent="Toolbar"]
offset_left = 173.0
offset_right = 177.0
offset_bottom = 31.0

[node name="Filename" type="Label" parent="Toolbar"]
offset_left = 181.0
offset_top = 2.0
offset_right = 1148.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Unsaved sound"
clip_text = true

[node name="VersionButton" parent="Toolbar" instance=ExtResource("6")]
offset_left = 1152.0
offset_top = 15.0
offset_right = 1152.0
offset_bottom = 15.0
website = "https://github.com/timothyqiu/gdfxr"

[node name="HSeparator" type="HSeparator" parent="."]
offset_top = 35.0
offset_right = 1152.0
offset_bottom = 39.0

[node name="Editor" type="HBoxContainer" parent="."]
offset_top = 43.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3

[node name="Generators" type="VBoxContainer" parent="Editor"]
offset_right = 101.0
offset_bottom = 605.0

[node name="Button" type="Button" parent="Editor/Generators"]
offset_right = 101.0
offset_bottom = 31.0
text = "Pickup/Coin"

[node name="Button2" type="Button" parent="Editor/Generators"]
offset_top = 35.0
offset_right = 101.0
offset_bottom = 66.0
text = "Laser/Shoot"

[node name="Button3" type="Button" parent="Editor/Generators"]
offset_top = 70.0
offset_right = 101.0
offset_bottom = 101.0
text = "Explosion"

[node name="Button4" type="Button" parent="Editor/Generators"]
offset_top = 105.0
offset_right = 101.0
offset_bottom = 136.0
text = "Powerup"

[node name="Button5" type="Button" parent="Editor/Generators"]
offset_top = 140.0
offset_right = 101.0
offset_bottom = 171.0
text = "Hit/Hurt"

[node name="Button6" type="Button" parent="Editor/Generators"]
offset_top = 175.0
offset_right = 101.0
offset_bottom = 206.0
text = "Jump"

[node name="Button7" type="Button" parent="Editor/Generators"]
offset_top = 210.0
offset_right = 101.0
offset_bottom = 241.0
text = "Blip/Select"

[node name="HSeparator" type="HSeparator" parent="Editor/Generators"]
offset_top = 245.0
offset_right = 101.0
offset_bottom = 249.0

[node name="Button8" type="Button" parent="Editor/Generators"]
offset_top = 253.0
offset_right = 101.0
offset_bottom = 284.0
size_flags_horizontal = 3
text = "Mutate"

[node name="Button9" type="Button" parent="Editor/Generators"]
offset_top = 288.0
offset_right = 101.0
offset_bottom = 319.0
size_flags_horizontal = 3
text = "Randomize"

[node name="ScrollContainer" type="ScrollContainer" parent="Editor"]
offset_left = 105.0
offset_right = 1152.0
offset_bottom = 605.0
size_flags_horizontal = 3

[node name="Params" type="HBoxContainer" parent="Editor/ScrollContainer"]
offset_left = 17.0
offset_top = 182.0
offset_right = 1029.0
offset_bottom = 423.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Envolope" type="VBoxContainer" parent="Editor/ScrollContainer/Params"]
offset_right = 246.0
offset_bottom = 241.0

[node name="ParamSlider" parent="Editor/ScrollContainer/Params/Envolope" instance=ExtResource("3")]
offset_right = 246.0
offset_bottom = 31.0
label = "Attack Time"
parameter = "p_env_attack"

[node name="ParamSlider2" parent="Editor/ScrollContainer/Params/Envolope" instance=ExtResource("3")]
offset_top = 35.0
offset_right = 246.0
offset_bottom = 66.0
label = "Sustain Time"
parameter = "p_env_sustain"

[node name="ParamSlider3" parent="Editor/ScrollContainer/Params/Envolope" instance=ExtResource("3")]
offset_top = 70.0
offset_right = 246.0
offset_bottom = 101.0
label = "Sustain Punch"
parameter = "p_env_punch"

[node name="ParamSlider4" parent="Editor/ScrollContainer/Params/Envolope" instance=ExtResource("3")]
offset_top = 105.0
offset_right = 246.0
offset_bottom = 136.0
label = "Decay Time"
parameter = "p_env_decay"

[node name="ParamSlider5" parent="Editor/ScrollContainer/Params/Envolope" instance=ExtResource("3")]
offset_top = 140.0
offset_right = 246.0
offset_bottom = 171.0
label = "Change Amount"
parameter = "p_arp_mod"
bipolar = true

[node name="ParamSlider6" parent="Editor/ScrollContainer/Params/Envolope" instance=ExtResource("3")]
offset_top = 175.0
offset_right = 246.0
offset_bottom = 206.0
label = "Change Speed"
parameter = "p_arp_speed"

[node name="ParamSlider7" parent="Editor/ScrollContainer/Params/Envolope" instance=ExtResource("3")]
offset_top = 210.0
offset_right = 246.0
offset_bottom = 241.0
label = "Volume"
parameter = "sound_vol"

[node name="Frequency" type="VBoxContainer" parent="Editor/ScrollContainer/Params"]
offset_left = 250.0
offset_right = 494.0
offset_bottom = 241.0

[node name="ParamSlider" parent="Editor/ScrollContainer/Params/Frequency" instance=ExtResource("3")]
offset_right = 244.0
offset_bottom = 31.0
label = "Start Frequency"
parameter = "p_base_freq"

[node name="ParamSlider2" parent="Editor/ScrollContainer/Params/Frequency" instance=ExtResource("3")]
offset_top = 35.0
offset_right = 244.0
offset_bottom = 66.0
label = "Min Frequency"
parameter = "p_freq_limit"

[node name="ParamSlider3" parent="Editor/ScrollContainer/Params/Frequency" instance=ExtResource("3")]
offset_top = 70.0
offset_right = 244.0
offset_bottom = 101.0
label = "Slide"
parameter = "p_freq_ramp"
bipolar = true

[node name="ParamSlider4" parent="Editor/ScrollContainer/Params/Frequency" instance=ExtResource("3")]
offset_top = 105.0
offset_right = 244.0
offset_bottom = 136.0
label = "Delta Slide"
parameter = "p_freq_dramp"
bipolar = true

[node name="ParamSlider5" parent="Editor/ScrollContainer/Params/Frequency" instance=ExtResource("3")]
offset_top = 140.0
offset_right = 244.0
offset_bottom = 171.0
label = "Vibrato Depth"
parameter = "p_vib_strength"

[node name="ParamSlider6" parent="Editor/ScrollContainer/Params/Frequency" instance=ExtResource("3")]
offset_top = 175.0
offset_right = 244.0
offset_bottom = 206.0
label = "Vibrato Speed"
parameter = "p_vib_speed"

[node name="ParamSlider7" parent="Editor/ScrollContainer/Params/Frequency" instance=ExtResource("3")]
offset_top = 210.0
offset_right = 244.0
offset_bottom = 241.0
label = "Repeat Speed"
parameter = "p_repeat_speed"

[node name="Waveform" type="VBoxContainer" parent="Editor/ScrollContainer/Params"]
offset_left = 498.0
offset_right = 727.0
offset_bottom = 241.0

[node name="WaveformOption" parent="Editor/ScrollContainer/Params/Waveform" instance=ExtResource("4")]
offset_right = 229.0
offset_bottom = 31.0
options = ["Square", "Sawtooth", "Sine", "Noise"]
parameter = "wave_type"

[node name="ParamSlider" parent="Editor/ScrollContainer/Params/Waveform" instance=ExtResource("3")]
offset_top = 35.0
offset_right = 229.0
offset_bottom = 66.0
label = "Square Duty"
parameter = "p_duty"

[node name="ParamSlider2" parent="Editor/ScrollContainer/Params/Waveform" instance=ExtResource("3")]
offset_top = 70.0
offset_right = 229.0
offset_bottom = 101.0
label = "Duty Sweep"
parameter = "p_duty_ramp"
bipolar = true

[node name="ParamSlider5" parent="Editor/ScrollContainer/Params/Waveform" instance=ExtResource("3")]
offset_top = 105.0
offset_right = 229.0
offset_bottom = 136.0
label = "Phaser Offset"
parameter = "p_pha_offset"
bipolar = true

[node name="ParamSlider3" parent="Editor/ScrollContainer/Params/Waveform" instance=ExtResource("3")]
offset_top = 140.0
offset_right = 229.0
offset_bottom = 171.0
label = "Phaser Sweep"
parameter = "p_pha_ramp"
bipolar = true

[node name="Filter" type="VBoxContainer" parent="Editor/ScrollContainer/Params"]
offset_left = 731.0
offset_right = 1012.0
offset_bottom = 241.0

[node name="ParamSlider" parent="Editor/ScrollContainer/Params/Filter" instance=ExtResource("3")]
offset_right = 281.0
offset_bottom = 31.0
label = "Low-pass Cutoff"
parameter = "p_lpf_freq"

[node name="ParamSlider2" parent="Editor/ScrollContainer/Params/Filter" instance=ExtResource("3")]
offset_top = 35.0
offset_right = 281.0
offset_bottom = 66.0
label = "Low-pass Sweep"
parameter = "p_lpf_ramp"
bipolar = true

[node name="ParamSlider5" parent="Editor/ScrollContainer/Params/Filter" instance=ExtResource("3")]
offset_top = 70.0
offset_right = 281.0
offset_bottom = 101.0
label = "Low-pass Resonance"
parameter = "p_lpf_resonance"

[node name="ParamSlider3" parent="Editor/ScrollContainer/Params/Filter" instance=ExtResource("3")]
offset_top = 105.0
offset_right = 281.0
offset_bottom = 136.0
label = "High-pass Cutoff"
parameter = "p_hpf_freq"

[node name="ParamSlider4" parent="Editor/ScrollContainer/Params/Filter" instance=ExtResource("3")]
offset_top = 140.0
offset_right = 281.0
offset_bottom = 171.0
label = "High-pass Sweep"
parameter = "p_hpf_ramp"
bipolar = true

[node name="PluginTranslator" parent="." instance=ExtResource("5")]

[connection signal="pressed" from="Toolbar/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Toolbar/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Toolbar/Save" to="." method="_on_Save_pressed"]
[connection signal="about_to_popup" from="Toolbar/Extra" to="." method="_on_Extra_about_to_show"]
[connection signal="pressed" from="Toolbar/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Toolbar/Restore" to="." method="_on_Restore_pressed"]
[connection signal="pressed" from="Editor/Generators/Button" to="." method="_on_Randomize_pressed" binds= [0]]
[connection signal="pressed" from="Editor/Generators/Button2" to="." method="_on_Randomize_pressed" binds= [1]]
[connection signal="pressed" from="Editor/Generators/Button3" to="." method="_on_Randomize_pressed" binds= [2]]
[connection signal="pressed" from="Editor/Generators/Button4" to="." method="_on_Randomize_pressed" binds= [3]]
[connection signal="pressed" from="Editor/Generators/Button5" to="." method="_on_Randomize_pressed" binds= [4]]
[connection signal="pressed" from="Editor/Generators/Button6" to="." method="_on_Randomize_pressed" binds= [5]]
[connection signal="pressed" from="Editor/Generators/Button7" to="." method="_on_Randomize_pressed" binds= [6]]
[connection signal="pressed" from="Editor/Generators/Button8" to="." method="_on_Mutate_pressed"]
[connection signal="pressed" from="Editor/Generators/Button9" to="." method="_on_Randomize_pressed" binds= [-1]]
